@@ -14,7 +14,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
 import net.neoforged.fml.loading.FMLConfig;
 import net.neoforged.fml.loading.ImmediateWindowHandler;
 import net.neoforged.fml.loading.LoadingModList;
@@ -45,13 +44,9 @@ public class BackgroundScanHandler {
         int maxThreads = FMLConfig.getIntConfigValue(FMLConfig.ConfigValue.MAX_THREADS);
         // Leave 1 thread for Minecraft's own bootstrap
         int poolSize = Math.max(1, maxThreads - 1);
-        AtomicInteger threadCount = new AtomicInteger();
-        modContentScanner = Executors.newFixedThreadPool(poolSize, r -> {
-            final Thread thread = Executors.defaultThreadFactory().newThread(r);
-            thread.setDaemon(true);
-            thread.setName("background-scan-handler-" + threadCount.getAndIncrement());
-            return thread;
-        });
+        modContentScanner = Executors.newFixedThreadPool(
+                poolSize,
+                Thread.ofPlatform().name("background-scan-handler-", 0).daemon().factory());
         scannedFiles = new ArrayList<>();
         pendingFiles = new ArrayList<>();
         allFiles = new ArrayList<>();
@@ -86,6 +81,7 @@ public class BackgroundScanHandler {
         this.loadingModList = loadingModList;
     }
 
+    @Deprecated(forRemoval = true)
     public LoadingModList getLoadingModList() {
         return loadingModList;
     }
